secondfile/objects/UI_Logging_Metric__c.object
<CustomObject>
    <description>To capture front end load timing and other performance metrics</description>
    <fields>
        <fullName>Browser__c</fullName>
        <description>Browser on which metrics is recorded</description>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latencyTime__c</fullName>
        <description>Time it takes for the request to get to the server, the time it takes the server to render a response, and the time until the last byte of that response is downloaded on client side.</description>
        <label>latencyTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageLoadTime__c</fullName>
        <description>Total time to load complete page with Data.</description>
        <label>pageLoadTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageName__c</fullName>
        <description>Name of Page on which Metrics are recorded</description>
        <label>pageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processingTime__c</fullName>
        <description>Time taken for complete page to load.</description>
        <label>processingTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>requestStartTime__c</fullName>
        <description>Once the page is loaded, this is when request started to the server.</description>
        <label>requestStartTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>UI Logging Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>pageName__c</columns>
        <columns>requestStartTime__c</columns>
        <columns>latencyTime__c</columns>
        <columns>processingTime__c</columns>
        <columns>pageLoadTime__c</columns>
        <columns>Browser__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UI Logging Metric Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Logging Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>